# Substrate-Web3-DNS-Tutorial

./: Gemfile  README.md  _config.yml
node/: Cargo.toml  README.md  metalog.json
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs  template.rs
node/runtime/wasm/: Cargo.toml  build.sh
node/runtime/wasm/src/: lib.rs
node/src/: chain_spec.rs  main.rs  service.rs
tutorial/: 1_introduction.md  2_setup.md  3_interface.md  4_runtime.md  5_testing.md  6_tests.md  6_unit_tests.md  7_ui.md  8_next_steps.md
ui/: package-lock.json  package.json
ui/css/: style.css
ui/src/: index.js
