[profile.release]
lto = true
panic = 'abort'
[dependencies.web3-dns-tutorial-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['web3-dns-tutorial-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'web3-dns-tutorial-runtime-wasm'
version = '1.0.0'
